--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,377 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon"
+    type="image/x-icon"
+    href="../src/images/icons/NA MU.png">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <div class="header" id="home">
+      <div class="container">
+        <div class="header__wrapper">
+          <a href="#menu" class="header__link"></a>
+          <a href="#" class="header__logo"></a>
+          <div class="header__photo">
+            <img
+            src="./images/header-foto-mob.png"
+            alt="Foto"
+            class="header__foto--mb"
+            >
+
+            <img
+            src="./images/header-foto-tab.png"
+            alt="Foto"
+            class="header__foto--tab"
+            >
+
+            <img src="./images/header-foto-desk.png"
+            alt="Foto"
+            class="header__foto--desk">
+          </div>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <button class="header__button">квитки</button>
+        </div>
+      </div>
+    </div>
+
+    <aside class="menu" id="menu">
+      <div class="menu__content">
+        <div class="container menu__container">
+          <div class="menu__nav">
+            <a href="#" class="menu__close"></a>
+            <ul class="menu__links">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#about us" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#exhibitions" class="menu__link">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__shedule"></div>
+          <div class="menu__shedule-2"></div>
+        </div>
+      </div>
+
+      <div class="menu__bottom"></div>
+    </aside>
+
+    <section class="exhibitions" id="exhibitions">
+      <div class="container">
+        <div class="exhibitions__wrapper">
+          <span class="exhibitions__side-mark"></span>
+          <h1 class="exhibitions__title">Актуальні події</h1>
+          <div class="exhibitions__article">
+            <div class="exhibitions__photo">
+              <img
+              src="./images/exhib-foto-mb.png"
+              alt="Foto"
+              class="exhibitions__foto-mb"
+              >
+              <img
+              src="./images/exhib-foto-ds.png"
+              alt="Foto"
+              class="exhibitions__foto-ds"
+              >
+            </div>
+            <div class="exhibitions__article-content">
+              <span class="exhibitions__event">ВИСТАВКА</span>
+              <span class="exhibitions__date">26.08-29.11.2019</span>
+              <h2 class="exhibitions__event-title">Йду і повертаюсь</h2>
+              <p class="exhibitions__description">Національний Художній Музей
+                України презентує унікальну частину колекції Градобанку -
+                українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="exhibitions__article">
+            <div class="exhibitions__photo">
+              <img
+              src="./images/exhib-foto-2-mb.png"
+              alt="Foto"
+              class="exhibitions__foto-mb"
+              >
+              <img
+              src="./images/exhib-foto-2-ds.png"
+              alt="Foto"
+              class="exhibitions__foto-ds"
+              >
+            </div>
+            <div class="exhibitions__article-content">
+              <span class="exhibitions__event">ВИСТАВКА</span>
+              <span class="exhibitions__date">26.08-29.11.2019</span>
+              <h2 class="exhibitions__event-title">І спогади і мрії</h2>
+              <p class="exhibitions__description">Національний художній музей
+                України до 100 річчя від дня народження   видатної української
+                художниці  Тетяни Яблонської  відкриває ретроспективну
+                ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="themes" id="about us">
+      <div class="container">
+        <div class="themes__photo">
+          <img
+          src="./images/themes-foto-mb.png"
+          alt="Foto"
+          class="themes__foto--mb">
+        </div>
+        <div class="themes__content">
+          <span class="themes__event">ЛЕКЦІЯ</span>
+          <span class="themes__date">26/08/2019 - 11:00</span>
+          <h2 class="themes__title">Від класицизму до романтизму</h2>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__photos-mb">
+          <div class="gallery__photo-1-mb">
+            <img
+            src="./images/gall-foto-mb.png"
+            alt="Foto"
+            class="gallery__foto-mb">
+          </div>
+
+          <div class="gallery__photo-2-mb">
+            <img
+            src="./images/gall-foto-mb.png"
+            alt="Foto"
+            class="gallery__foto-mb">
+          </div>
+        </div>
+
+        <div class="gallery__photos-tab">
+          <div class="gallery__photo-1-tab">
+            <img
+            src="./images/gall-foto-tab.png"
+            alt="Foto"
+            class="gallery__foto-tab">
+          </div>
+
+          <div class="gallery__photo-2-tab">
+            <img
+            src="./images/gall-foto-2-tab.png"
+            alt="Foto"
+            class="gallery__foto-tab">
+          </div>
+
+          <div class="gallery__photo-3-tab">
+            <img
+            src="./images/gall-foto-2-tab.png"
+            alt="Foto"
+            class="gallery__foto-tab">
+          </div>
+        </div>
+
+        <div class="gallery__photos-ds">
+          <div class="gallery__photo-1-ds">
+            <img
+            src="./images/gall-foto-1-ds.png"
+            alt="Foto"
+            class="gallery__foto-ds">
+          </div>
+
+          <div class="gallery__photo-2-ds">
+            <img
+            src="./images/gall-foto-2-ds.png"
+            alt="Foto"
+            class="gallery__foto-ds">
+          </div>
+
+          <div class="gallery__photo-3-ds">
+            <img
+            src="./images/gall-foto-3-ds.png"
+            alt="Foto"
+            class="gallery__foto-ds">
+          </div>
+
+          <div class="gallery__photo-4-ds">
+            <img
+            src="./images/gall-foto-4-ds.png"
+            alt="Foto"
+            class="gallery__foto-ds"
+            >
+          </div>
+        </div>
+        <span class="gallery__slider-buttons"></span>
+      </div>
+    </section>
+
+    <section class="subscription">
+      <div class="subscription__photo">
+        <img
+        src="./images/subscrib-mb.png"
+        alt="gall-foto-2-tab"
+        class="subscription__foto-mb"
+        >
+
+        <img
+        src="./images/subscrib-tab.png"
+        alt="Foto"
+        class="subscription__foto-tab"
+        >
+      </div>
+      <div class="subscription__content">
+        <h2 class="subscription__title">Підписка</h2>
+        <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form
+        onsubmit="this.reset(); return false"
+        action="/login"
+        class="subscription__form"
+        method="get"
+        >
+          <div class="subscription__inputs">
+            <input
+            type="email"
+            class="subscription__input"
+            placeholder="E-mail"
+            required
+            >
+            <button class="subscription__button" type="submit">
+              <img src="./images/icons/button-arr-black.png" alt="#">
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <div class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__logo">
+            <a href="#" class="footer__logo-link">
+              <img
+              src="./images/icons/logo-foot.png"
+              alt="logo"
+              class="footer__logo-icon"
+              >
+            </a>
+          </div>
+          <div class="footer__icons">
+            <a
+            href="https://www.facebook.com/namu.museum"
+            class="footer__facebook"
+            target="_blank"
+            >
+              <img
+              src="./images/icons/facebook-foot.png"
+              alt="icon"
+              class="footer__facebook-icon"
+              >
+            </a>
+
+            <a
+            href="https://www.instagram.com/namu.museum/"
+            class="footer__instagram"
+            target="_blank"
+            >
+              <img
+              src="./images/icons/insta-foot.png"
+              alt="icon"
+              class="footer__instagram-icon"
+              >
+            </a>
+          </div>
+
+          <div class="footer__shedule">
+            <h4 class="footer__shedule-title">Графік роботи</h4>
+            <img
+            src="./images/shedule-foot.png"
+            alt="shedule"
+            class="footer__shedule-content-mb"
+            >
+
+            <img
+            src="./images/footer-shed-tab.png"
+            alt="foto"
+            class="footer__shedule-content-tab"
+            >
+
+            <img
+            src="./images/shedule-footer-ds.png"
+            alt="foto"
+            class="footer__shedule-content-ds"
+            >
+          </div>
+
+          <div class="footer__contacts">
+            <h4 class="footer__contacts-title">Контакти:</h4>
+            <div class="footer__contacts-content">
+              <ul class="footer__links">
+                <li class="footer__item">
+                  <a
+                  href="https://maps.app.goo.gl/VSv6AHQCrGRYcSQ1A"
+                  class="footer__link"
+                  target="_blank"
+                  >вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="footer__item">
+                  <a href="tel:+38(044)278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
+                </li>
+
+                <li class="footer__item">
+                  <a href="tel:+38(044)278-74-54" class="footer__link">факс +38 (044) 278-74-54</a>
+                </li>
+
+                <li class="footer__item">
+                  <a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu.kiev.ua</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__home-mark">
+              <a href="#home" class="footer__home-link">
+                <img
+                src="./images/icons/arrow-foot.png"
+                alt="Link"
+                class="footer__mark"
+                >
+              </a>
+            </div>
+          </div>
+          <div class="footer__line"></div>
+
+          <div class="footer__nav-1">
+            <div class="footer__nav-links">
+              <a href="#gallery" class="footer__nav-link">Галерея</a>
+            </div>
+            <div class="footer__nav-links">
+              <a href="#exhibitions" class="footer__nav-link">Виставки та події</a>
+            </div>
+          </div>
+          <div class="footer__nav-2">
+            <div class="footer__nav-links">
+              <a href="#about us" class="footer__nav-link">Про Нас</a>
+            </div>
+            <div class="footer__nav-links">
+              <a href="#contacts" class="footer__nav-link">Контакти</a>
+            </div>
+          </div>
+          <span class="footer__note footer__note-1">Designed by Zhyriada Marina</span>
+          <span class="footer__note footer__note-2">Copyright © 2019. All Rights Reserved.</span>
+        </div>
+      </div>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
