--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,365 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/header/NAMU.svg"
+      type="images/x-icon"
+    >
+    <link rel="stylesheet" href="./styles/index.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    >
+
+    <script src="scripts/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+
+    <header class="header">
+      <div class="header__content">
+        <a href="#menu" class="icon icon--burger"></a>
+        <div class="header__top-bar">
+          <a href="#" class="header__logo-link">
+            <img
+              src="./images/header/NAMU.svg"
+              alt="NAMU"
+              class="header__logo"
+            >
+          </a>
+        </div>
+      </div>
+
+      <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+      <a href="#events" class="header__event">Події</a>
+
+      <div class="header__links">
+        <a href="#events" class="header__link header__link--tickets">
+          <p class="info__link-text">Квитки</p>
+        </a>
+        <a href="#events" class="header__link header__link--svg">
+          <p class="header__link-arrow"></p>
+        </a>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__info-block">
+        <div class="menu__wrapper">
+          <nav class="nav menu__nav">
+            <a href="#" class="icon icon--close"></a>
+
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#gallery">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#events">Виставки та події</a>
+              </li>
+            </ul>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#about-us">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a class="nav__link" href="#contacts">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__schedule schedule">
+            <p class="schedule__title">Графік роботи</p>
+
+            <div class="schedule__wrapper">
+              <div class="schedule__open-time">
+                <ul class="schedule__list">
+                  <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> середа</li>
+                  <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> четвер</li>
+                  <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> п’ятниця</li>
+                  <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> субота</li>
+                  <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> неділя</li>
+                </ul>
+              </div>
+
+              <p class="schedule__paragraph">
+                <span class="schedule__text">Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section id="events" class="evetns">
+        <div class="container">
+          <h2 class="events__title">
+            Актуальні
+            події
+          </h2>
+
+          <section class="events__event">
+            <img
+              src="./images/main/Actual-first-big.png"
+              alt="Photo"
+              class="events__img"
+            >
+            <div class="events__wrapper">
+              <div class="events__schedule">
+                <p class="events__text">ВИСТАВКА</p>
+                <p class="events__time">26.08-29.11.2019</p>
+              </div>
+
+              <h4 class="events__event-title">Йду і повертаюсь</h4>
+
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </section>
+
+          <section class="events__event">
+            <img
+              src="./images/main/Actual-second-big.png"
+              alt="Photo"
+              class="events__img"
+            >
+            <div class="events__wrapper">
+              <div class="events__schedule">
+                <p class="events__text">ВИСТАВКА</p>
+                <p class="events__time">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="events__event-title">І спогади і мрії</h3>
+
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+          </section>
+        </div>
+      </section>
+
+      <section class="quote" id="about-us">
+        <div class="quote__img"></div>
+        <div class="quote__wrapper">
+          <div class="quote__schedule">
+            <p class="quote__text">ЛЕКЦІЯ</p>
+            <p class="quote__time">26/08/2019 - 11:00</p>
+          </div>
+          <h4 class="quote__title">Від класицизму до романтизму</h4>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="gallery__wrapper">
+            <div class="swiper" id="swiper-1">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide gallery__slide-1">
+                  <img src="./images/main/women.png" alt="Women">
+                </div>
+                <div class="swiper-slide gallery__slide-2">
+                  <img src="./images/main/house.png" alt="House">
+                </div>
+                <div class="swiper-slide gallery__slide-3">
+                  <img src="./images/main/nature.png" alt="Nature">
+                </div>
+                <div class="swiper-slide gallery__slide-4">
+                  <img src="./images/main/ocean.png" alt="Ocean">
+                </div>
+              </div>
+              <div class="swiper-pagination">
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery__content">
+            <div class="gallery__slide-1">
+              <img
+                src="./images/main/women.png"
+                alt="Women"
+                class="gallery__photo gallery__photo-1"
+              >
+            </div>
+            <div class=" gallery__slide-2">
+              <img
+                  class="gallery__photo"
+                  src="./images/main/house.png"
+                  alt="House">
+            </div>
+            <div class="gallery__slide-3">
+              <img
+                src="./images/main/nature.png"
+                alt="Nature"
+                class="gallery__photo"
+              >
+            </div>
+            <div class="gallery__slide-4">
+              <img
+                class="gallery__photo"
+                src="./images/main/ocean.png"
+                alt="Ocean"
+              >
+            </div>
+          </div>
+
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <section class="footer__follow follow">
+        <div class="container">
+          <h2 class="follow__title">Підписка</h2>
+          <p class="follow__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <div class="follow__buttons">
+            <input
+              type="text"
+              class="follow__input"
+              placeholder="E-mail"
+            >
+            <button class="follow__button">
+              <p class="follow__arrow"></p>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="footer__content content">
+        <div class="container">
+          <div class="content__main">
+            <div class="content__icons">
+              <a href="#">
+                <img
+                  src="./images/header/NAMU.svg"
+                  alt="Logo"
+                  class="content__icon"
+                >
+              </a>
+              <div class="content__social-network">
+                <a
+                  href="https://www.facebook.com/"
+                  class="content__icon"
+                  target="_blank"
+                >
+                  <img src="./images/footer/facebook.svg" alt="Facebook">
+                </a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="content__icon"
+                  target="_blank"
+                >
+                  <img src="./images/footer/instagram.svg" alt="Instagram">
+                </a>
+              </div>
+            </div>
+
+            <div class="content__wrapper">
+              <div class="content__main-info">
+                <div class="content__schedule schedule">
+                  <p class="schedule__title">Графік роботи</p>
+
+                  <div class="schedule__open-time">
+                    <ul class="schedule__list">
+                      <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> середа</li>
+                      <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> четвер</li>
+                      <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> п’ятниця</li>
+                      <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> субота</li>
+                      <li class="schedule__item"><span class="schedule__text">12:00 — 20:00</span> неділя</li>
+                    </ul>
+                  </div>
+
+                  <p class="schedule__paragraph">
+                    <span class="schedule__text">Вихідні:</span> понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+
+                <div class="content__contacts contacts">
+                  <p class="contacts__title">Контакти:</p>
+
+                  <a
+                    target="_blank"
+                    href="https://maps.app.goo.gl/YaGzxpwpv58zMTtv6"
+                    class="contacts__link"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <a
+                    href="tel: +38 (044) 278-13-57"
+                    target="_blank"
+                    class="contacts__link"
+                  >
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <a
+                    href="tel: +38 (044) 278-13-57"
+                    class="contacts__link"
+                  >
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    target="_blank"
+                    class="contacts__link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+
+                <button class="content__button">
+                  <img
+                    src="./images/footer/carbon_arrow-up.svg"
+                    alt="Button"
+                  >
+                </button>
+              </div>
+
+              <nav class="content__nav nav">
+                <ul class="nav__list nav__list--footer">
+                  <li class="nav__item nav__item--footer">
+                    <a class="nav__link nav__link--footer" href="#gallery">Галерея</a>
+                  </li>
+                  <li class="nav__item nav__item--footer">
+                    <a class="nav__link nav__link--footer" href="#events">Виставки та події</a>
+                  </li>
+                </ul>
+                <ul class="nav__list nav__list--footer">
+                  <li class="nav__item nav__item--footer">
+                    <a class="nav__link nav__link--footer" href="#about-us">Про Нас</a>
+                  </li>
+                  <li class="nav__item nav__item--footer">
+                    <a class="nav__link nav__link--footer" href="#details">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="content__copyright">
+            <p class="content__text">Designed by Zhyriada Marina</p>
+            <p class="content__text">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
