--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
     <section class="exhibitions" id="exhibitions">
       <div class="container">
         <div class="exhibitions__wrapper">
-          <span class="exhibitions__side-mark"></span>
+          <span class="exhibitions__side-mark">ПОДІЇ</span>
           <h1 class="exhibitions__title">Актуальні події</h1>
           <div class="exhibitions__article">
             <div class="exhibitions__photo">
@@ -298,23 +298,24 @@
 
           <div class="footer__shedule">
             <h4 class="footer__shedule-title">Графік роботи</h4>
-            <img
-            src="./images/shedule-foot.png"
-            alt="shedule"
-            class="footer__shedule-content-mb"
-            >
-
-            <img
-            src="./images/footer-shed-tab.png"
-            alt="foto"
-            class="footer__shedule-content-tab"
-            >
-
-            <img
-            src="./images/shedule-footer-ds.png"
-            alt="foto"
-            class="footer__shedule-content-ds"
-            >
+            <div class="footer__shedule-time">12:00 — 20:00</div>
+            <span class="footer__shedule-day">середа</span>
+            <div class="footer__shedule-time">12:00 — 20:00</div>
+            <span class="footer__shedule-day">четвер</span>
+            <div class="footer__shedule-time">12:00 — 20:00</div>
+            <span class="footer__shedule-day"> п’ятниця</span>
+            <div class="footer__shedule-time">11:00 — 19:00</div>
+            <span class="footer__shedule-day"> субота</span>
+            <div class="footer__shedule-time">11:00 — 19:00</div>
+            <span class="footer__shedule-day"> неділя</span>
+            <p class="footer__shedule-note">
+              <span class="footer__shedule-word-1">Вихідні</span>
+              <span class="footer__shedule-colon">:</span> понеділок,
+              <span class="footer__shedule-word-2">вівторок</span>
+              Каса припиняє роботу за 1
+              <span class="footer__shedule-word-3">годину</span>
+              <span class="footer__shedule-word-4">до закриття музею</span>
+            </p>
           </div>
 
           <div class="footer__contacts">
