--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,19 @@
               </li>
             </ul>
           </div>
-          <div class="menu__shedule"></div>
+          <div class="menu__shedule">
+            <h4 class="menu__shedule-title">Графік роботи</h4>
+            <span class="menu__shedule-time">12:00 — 20:00</span>
+            <span class="menu__shedule-day">середа</span><br>
+            <span class="menu__shedule-time">12:00 — 20:00</span>
+            <span class="menu__shedule-day">четвер</span><br>
+            <span class="menu__shedule-time">12:00 — 20:00</span>
+            <span class="menu__shedule-day">п’ятниця</span><br>
+            <span class="menu__shedule-time">11:00 — 19:00</span>
+            <span class="menu__shedule-day">субота</span><br>
+            <span class="menu__shedule-time">11:00 — 19:00</span>
+            <span class="menu__shedule-day">неділя</span>
+          </div>
           <div class="menu__shedule-2"></div>
         </div>
       </div>
@@ -135,6 +147,16 @@
           src="./images/themes-foto-mb.png"
           alt="Foto"
           class="themes__foto--mb">
+
+          <img
+          src="./images/themes-foto-tab.png"
+          alt="Foto"
+          class="themes__foto--tab">
+
+          <img
+          src="./images/themes-foto-ds.png"
+          alt="Foto"
+          class="themes__foto--ds">
         </div>
         <div class="themes__content">
           <span class="themes__event">ЛЕКЦІЯ</span>
@@ -373,7 +395,7 @@
             </div>
           </div>
           <span class="footer__note footer__note-1">Designed by Zhyriada Marina</span>
-          <span class="footer__note footer__note-2">Copyright © 2019. All Rights Reserved.</span>
+          <span class="footer__note footer__note-2">Copyright © 2024. All Rights Reserved.</span>
         </div>
       </div>
     </div>
