--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Museum</title>
     <link rel="icon"
     type="image/x-icon"
-    href="../src/images/icons/NA MU.png">
+    href="../src/images/icons/NAMU.svg">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -77,7 +77,12 @@
             <span class="menu__shedule-time">11:00 — 19:00</span>
             <span class="menu__shedule-day">неділя</span>
           </div>
-          <div class="menu__shedule-2"></div>
+          <div class="menu__shedule-2">
+            <span class="menu__shedule-2-word-1">Вихідні:</span>
+             понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
         </div>
       </div>
 
@@ -286,7 +291,7 @@
           <div class="footer__logo">
             <a href="#" class="footer__logo-link">
               <img
-              src="./images/icons/logo-foot.png"
+              src="./images/icons/NAMU.svg"
               alt="logo"
               class="footer__logo-icon"
               >
@@ -299,7 +304,7 @@
             target="_blank"
             >
               <img
-              src="./images/icons/facebook-foot.png"
+              src="./images/icons/facebook-foot.svg"
               alt="icon"
               class="footer__facebook-icon"
               >
@@ -311,7 +316,7 @@
             target="_blank"
             >
               <img
-              src="./images/icons/insta-foot.png"
+              src="./images/icons/insta-foot.svg"
               alt="icon"
               class="footer__instagram-icon"
               >
