Fixed small fixes

--- a/src/index.html
+++ b/src/index.html
@@ -229,16 +229,16 @@
           <h2 class="follow__title">Підписка</h2>
           <p class="follow__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-          <div class="follow__buttons">
+          <form class="follow__forms">
             <input
-              type="text"
+              type="email"
               class="follow__input"
               placeholder="E-mail"
             >
-            <button class="follow__button">
+            <button type="submit" class="follow__button">
               <p class="follow__arrow"></p>
             </button>
-          </div>
+          </form>
         </div>
       </section>
       <section class="footer__content content">
