--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,324 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
+    <link rel="icon" href="images/logo.svg">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a href="#menu" class="header__menu-button"></a>
+          <a href="#" class="header__logo logo">
+            <img src="images/logo.svg" alt="logo">
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="menu__close"></a>
+          <nav class="menu_nav">
+            <ul class="nav__list nav__list--header">
+              <li class="nav__item"><a href="#gallery" class="nav__link nav__link--header">Галерея</a></li>
+              <li class="nav__item"><a href="#subscription" class="nav__link nav__link--header">Про нас</a></li>
+              <li class="nav__item"><a href="#events" class="nav__link nav__link--header">Виставки та події</a></li>
+              <li class="nav__item"><a href="#contacts" class="nav__link nav__link--header">Контакти</a></li>
+            </ul>
+          </nav>
+          <div class="menu__contacts-row contacts-row contacts-row--header">
+            <h3 class="contacts-row__title">Графік роботи</h3>
+            <ul class="contacts-row__list contacts-row__list--header">
+              <li class="contacts-row__item ">
+                <strong> 12:00 — 20:00</strong> середа
+              </li>
+              <li class="contacts-row__item">
+                <strong> 12:00 — 20:00</strong> четвер
+              </li>
+              <li class="contacts-row__item">
+                <strong> 12:00 — 20:00</strong> п’ятниця
+              </li>
+              <li class="contacts-row__item">
+                <strong> 11:00 — 19:00</strong> субота
+              </li>
+              <li class="contacts-row__item">
+                <strong> 11:00 — 19:00</strong> неділя
+              </li>
+              <li class="contacts-row__item contacts-row__item--weekend">
+                <strong> Вихідні: </strong> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="museum">
+        <div class="container">
+          <div class="museum__content">
+            <div class="museum__photo">
+              <img
+                src="images/museum.png"
+                alt="museum"
+                class="museum__img"
+              >
+            </div>
+            <div class="museum__text">
+              <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+              <a class="museum__link" href="#events">КВИТКИ</a>
+            </div>
+            <a href="#events" class="museum__events">Події</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="actual-events" id="events">
+        <div class="container">
+          <h2 class="actual-events__title section-title">
+            Актуальні події
+          </h2>
+          <div class="actual-events__content">
+            <article class="event">
+              <img
+                src="images/events/1.png"
+                alt="photo"
+                class="event__photo"
+              >
+              <div class="event__wrapper">
+                <div class="event__subtitle">
+                  <a href="#" class="event__category article-category">ВИСТАВКА</a>
+                  <a href="#" class="event__date article-date">26.08-29.11.2019</a>
+                </div>
+
+                <h3 class="event__title article-title">Йду і повертаюсь
+                </h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+
+            <article class="event">
+              <img
+                src="images/events/2.png"
+                alt="photo"
+                class="event__photo"
+              >
+              <div class="event__wrapper">
+                <div class="event__subtitle">
+                  <a href="#" class="event__category article-category">ВИСТАВКА</a>
+                  <a href="#" class="event__date article-date">26.08-29.11.2019</a>
+                </div>
+                <h3 class="event__title article-title">І спогади і мрії</h3>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </article>
+          </div>
+        </div>
+
+        <div class="lection">
+          <div class="container">
+            <div class="lection__content">
+              <div class="lection__top">
+                <a href="#" class="lection__category article-link">ВИСТАВКА</a>
+                <a href="#" class="lection__date article-date">26.08-29.11.2019</a>
+              </div>
+              <div class="lection__title article-title">Від класицизму до романтизму</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <div class="gallery__content">
+            <h2 class="gallery__title section-title">
+              Галерея
+            </h2>
+            <div class="gallery__slider slider">
+              <div class="slider__wrapper">
+                <div class="slider__image slider__image--4-column">
+                  <img
+                    class="slider__picture "
+                    src="images/gallery/1.png"
+                    alt="picture"
+                  >
+                </div>
+
+                <div class="slider__image slider__image--mobile">
+                  <img
+                    class="slider__picture"
+                    src="images/gallery/5.png"
+                    alt="picture"
+                  >
+                </div>
+
+                <div class="slider__image slider__image--8-column">
+                  <img
+                    class="slider__picture "
+                    src="images/gallery/2.png"
+                    alt="picture"
+                  >
+                </div>
+
+                <div class="slider__image slider__image--8-column">
+                  <img
+                    class="slider__picture "
+                    src="images/gallery/3.png"
+                    alt="picture"
+                  >
+                </div>
+
+                <div class="slider__image slider__image--4-column">
+                  <img
+                    class="slider__picture "
+                    src="images/gallery/4.png"
+                    alt="picture"
+                  >
+                </div>
+              </div>
+              <div class="slider__pagination">
+                <span class="slider__circle slider__circle--active"></span>
+                <span class="slider__circle"></span>
+                <span class="slider__circle"></span>
+                <span class="slider__circle"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title section-title">
+              Підписка
+            </h2>
+            <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            <form
+              action="/"
+              class="subscription__form"
+              method="post"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="email"
+                class="subscription__input"
+                required
+                placeholder="E-mail"
+              >
+              <button class="subscription__button"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+
+          <div class="footer__top">
+            <div class="footer__bar">
+              <a href="#" class="footer__logo logo">
+                <img src="images/logo.svg" alt="logo">
+              </a>
+              <div class="footer__social">
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__facebook"
+                  target="_blank"
+                ></a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__instagram"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+            <div class="footer__contacts" id="contacts">
+              <div class="footer__contacts-item contacts-row">
+                <h3 class="contacts-row__title">Графік роботи</h3>
+                <ul class="contacts-row__list">
+                  <li class="contacts-row__item">
+                    <strong>12:00 — 20:00</strong> середа
+                  </li>
+                  <li class="contacts-row__item">
+                    <strong>12:00 — 20:00</strong> четвер
+                  </li>
+                  <li class="contacts-row__item">
+                    <strong>12:00 — 20:00</strong> п’ятниця
+                  </li>
+                  <li class="contacts-row__item">
+                    <strong>11:00 — 19:00</strong> субота
+                  </li>
+                  <li class="contacts-row__item contacts-row__item--last">
+                    <strong>11:00 — 19:00</strong> неділя
+                  </li>
+                  <li class="contacts-row__item contacts-row__item--weekend">
+                    Вихідні: понеділок, вівторок <br>
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </li>
+                </ul>
+              </div>
+              <div class="footer__contacts-item contacts-row">
+                <h3 class="contacts-row__title">Контакти:</h3>
+                <ul class="contacts-row__list">
+                  <li class="contacts-row__item">
+                    <a
+                      href="https://www.google.com.ua/maps/@50.4851493,30.4721233,14z?hl=ru"
+                      class="contacts-row__link contacts-row__link--footer"
+                      target="_blank"
+                    >вул. М. Грушевського, 6; Київ, 01001</a>
+                  </li>
+                  <li class="contacts-row__item">
+                    <a href="tel:+380442787454" class="contacts-row__link contacts-row__link--footer">тел. +38 (044) 278-13-57</a>
+                  </li>
+                  <li class="contacts-row__item">
+                    <a href="tel:+380442787454" class="contacts-row__link contacts-row__link--footer">факс +38 (044) 278-74-54</a>
+                  </li>
+                  <li class="contacts-row__item">
+                    <a href="mailto:info@namu.kiev.ua" class="contacts-row__link contacts-row__link--footer">e-mail: info@namu.kiev.ua</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__back"><a href="#" class="footer__arrow"></a></div>
+            <nav class="footer__nav nav">
+              <ul class="nav__list nav__list--footer">
+                <li class="nav__item "><a href="#gallery" class="nav__link nav__link--footer">Галерея</a></li>
+                <li class="nav__item"><a href="#subscription" class="nav__link nav__link--footer">Про нас</a></li>
+                <li class="nav__item"><a href="#events" class="nav__link nav__link--footer">Виставки та події</a></li>
+                <li class="nav__item"><a href="#contacts" class="nav__link nav__link--footer">Контакти</a></li>
+              </ul>
+            </nav>
+          </div>
+
+
+          <div class="footer__bottom">
+            <p class="footer__author">Designed by Zhyriada Marina</p>
+            <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
