--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,294 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/logo.png"
+    >
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <script src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header" id="header">
+      <div class="header__navigation">
+        <a href="#menu" class="icon icon-menu"></a>
+        <a href="#header" class="icon-logo"></a>
+      </div>
+      <div class="header__container">
+        <div class="header__top"></div>
+        <div class="header__bottom wrapper">
+          <h1 class="header__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__bottom-button">
+            <p class="header__bottom-button--text">КВИТКИ</p>
+            <a href="#" class="icon-arrow icon-green"></a>
+          </div>
+          <div class="header__bottom-line"></div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu" id="menu">
+      <div class="menu__container wrapper">
+        <div class="menu__navigation">
+          <a href="#header" class="icon icone-close"></a>
+          <div class="nav">
+            <div class="nav__left">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav_link nav_link--white">Галерея</a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#exposition" class="nav_link nav_link--white">Виставки та <br>події</a>
+                </li>
+              </ul>
+            </div>
+            <div class="nav__right">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#subscription" class="nav_link nav_link--white">Про Нас</a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#contacts" class="nav_link nav_link--white">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu__info">
+          <div class="menu__info-top">
+            <div class="menu__info-timetable">
+              <p class="info-main info info--white">Графік роботи</p>
+              <p class="info info--white"><span class="white-text">12:00 — 20:00</span> середа</p>
+              <p class="info info--white"><span class="white-text">12:00 — 20:00</span> четвер</p>
+              <p class="info info--white"><span class="white-text">12:00 — 20:00</span> п’ятниця</p>
+              <p class="info info--white"><span class="white-text">11:00 — 19:00</span> субота</p>
+              <p class="info info--white"><span class="white-text">11:00 — 19:00</span> неділя</p>
+            </div>
+            <div class="menu__info-contacts menu-remove">
+              <p class="info__contacts">Контакти:</p>
+              <p class="info">вул. М. Грушевського, 6; Київ, 01001
+                <br>тел. +38 (044) 278-13-57
+                <br>факс +38 (044) 278-74-54
+                <br>e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+          <div class="menu__info-bottom">
+            <p class="info info--white"><span class="white-text">Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="exposition wrapper" id="exposition">
+        <h2 class="exposition__title">Актуальні події</h2>
+        <div class="exposition__container">
+          <img
+            src="../src/images/main/image-1.png"
+            alt="landscape"
+            class="exposition__container-image"
+          >
+          <div class="exposition__container-info">
+            <div class="exposition__container-info--info">
+              <p class="info__text">ВИСТАВКА</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <div class="exposition__container-title">
+              <h3>Йду і повертаюсь</h3>
+              <div class="icon__red-square"></div>
+            </div>
+            <p class="exposition__subtitles">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </div>
+
+        <div class="exposition__container">
+          <img
+            src="../src/images/main/image-2.png"
+            alt="landscape"
+            class="exposition__container-image"
+          >
+          <div class="exposition__container-info">
+            <div class="exposition__container-info--info">
+              <p class="info__text">ВИСТАВКА</p>
+              <p class="info__date">26.08-29.11.2019</p>
+            </div>
+            <div class="exposition__container-title">
+              <h3>І спогади і мрії</h3>
+              <div class="icon__red-square"></div>
+            </div>
+            <p class="exposition__subtitles">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
+        </div>
+
+        <div class="lecture">
+          <div class="lecture__image">
+            <div class="lecture__container">
+              <div class="lecture__wrapp">
+                <div class="lecture__container-info">
+                  <p class="info__text">ЛЕКЦІЯ</p>
+                  <p class="info__date">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="lecture__container-title">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery wrapper" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__wrapper">
+          <div class="gallery__slider">
+            <img
+              id="slide-1"
+              src="../src/images/gallery-photo/gallery-1.png"
+              alt="img1"
+              class="gallery__slide
+                gallery__slide--square"
+            >
+            <img
+              id="slide-2"
+              src="../src/images/gallery-photo/gallery-3.png"
+              alt="img2"
+              class="gallery__slide
+                gallery__slide--wide"
+            >
+            <img
+              id="slide-3"
+              src="../src/images/gallery-photo/gallery-4.png"
+              alt="img3"
+              class="gallery__slide
+                gallery__slide--small
+                gallery__slide--wide"
+            >
+            <img
+              id="slide-4"
+              src="../src/images/gallery-photo/gallery-5.png"
+              alt="img4"
+              class="gallery__slide
+                gallery__slide--small
+                gallery__slide--square"
+            >
+          </div>
+          <div class="gallery__nav">
+            <a href="#slide-1" class="gallery__button"></a>
+            <a href="#slide-2" class="gallery__button"></a>
+            <a href="#slide-3" class="gallery__button"></a>
+            <a href="#slide-4" class="gallery__button"></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="subscription__background">
+          <h2 class="subscription__title white-text">Підписка</h2>
+          <p class="subscription__subtitles">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <div class="subscription__button">
+            <input
+              type="text"
+              class="subscription__button-text"
+              placeholder="E-mail"
+            >
+            <a href="#" class="subscription__button-arrow icon-arrow">></a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer wrapper" id="contacts">
+      <div class="footer__container">
+        <div class="header__navigation navigation">
+          <a href="#header" class="icon-logo"></a>
+          <div class="navigation__social">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="icon icon-facebook">
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="icon icon-instagram">
+            </a>
+          </div>
+        </div>
+        <div class="footer__top">
+          <div class="menu__info footer--info">
+            <div class="menu__info-top footer__menu__info-top">
+              <div class="menu__info-timetable">
+                <p class="info-main info info--black">Графік роботи</p>
+                <p class="info info--black"><span>12:00 — 20:00</span> середа</p>
+                <p class="info info--black"><span>12:00 — 20:00</span> четвер</p>
+                <p class="info info--black"><span>12:00 — 20:00</span> п’ятниця</p>
+                <p class="info info--black"><span>11:00 — 19:00</span> субота</p>
+                <p class="info info--black"><span>11:00 — 19:00</span> неділя</p>
+                <div class="menu__info-bottom info--weekend">
+                  <p class="info info--black"><span><br>Вихідні:</span> понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+                </div>
+              </div>
+              <div class="menu__info-contacts">
+                <p class="info-main info--black info">Контакти:</p>
+                <p class="info info--black">вул. М. Грушевського, 6; Київ, 01001
+                  <br>тел. +38 (044) 278-13-57
+                  <br>факс +38 (044) 278-74-54
+                  <br>e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+            </div>
+            <a href="#header">
+              <img
+                src="../src/images/icons/Arrow-up.png"
+                alt="arrow"
+                class="icon-arrow icon-arrow-up"
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="nav footer--nav">
+        <div class="nav__left">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav_link nav_link--black">Галерея</a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#exposition" class="nav_link nav_link--black">Виставки та події</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav__right footer__nav--right">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#subscription" class="nav_link nav_link--black">Про Нас</a>
+            </li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#contacts" class="nav_link nav_link--black">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
