--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <div class="header__top">
           <div class="header__menu menu--padding">
             <a href="#menu" class="icon icon--menu"></a>
-            <div class="header__logo logo">na <br> my</div>
+            <div class="header__logo logo">na <br> mu</div>
           </div>
         </div>
         <div class="header__bottom">
@@ -238,7 +238,7 @@
         <div class="footer__content">
           <div class="footer__content--social">
             <div class="footer__social">
-              <a href="#" class="footer__logo logo">na <br> my</a>
+              <a href="#" class="footer__logo logo">na <br> mu</a>
               <div class="footer__icons">
                 <a
                   href="https://uk-ua.facebook.com/"
