add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="styles/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body class="page__body">
+  <body class="page__body" id="page__body">
     <!-- #region header-->
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__top">
           <div class="header__menu menu--padding">
@@ -332,6 +332,7 @@
                 <a href="#about" class="footer__navigation--link">Про Нас</a>
                 <a href="#contacts" class="footer__navigation--link">Контакти</a>
               </div>
+              <a href="#page__body" class="footer__page"></a>
             </div>
           </div>
         </div>
