add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -187,14 +187,21 @@
         ></div>
 
         <div class="page__main-section--exhibition--block">
-          <div class="page__main-section--exhibition--block-date">
+          <div class="page__main-section--exhibition--block--date">
             <p class="page__main-section--exhibition--block-p">ВИСТАВКА</p>
             <p class="page__main-section--exhibition--block-date">
               26.08-29.11.2019
             </p>
           </div>
 
-          <h3 class="page__main-section--exhibition-h3">Йду і повертаюсь</h3>
+          <h3 class="page__main-section--exhibition-h3">
+            Йду і повертаюсь
+            <img
+              src="./images/orange-sq.svg"
+              alt="s"
+              class="page__main-section--exhibition-h3--img"
+            />
+          </h3>
 
           <p class="page__main-section--exhibition-p">
             Національний Художній Музей України презентує унікальну частину
@@ -217,7 +224,14 @@
             </p>
           </div>
 
-          <h3 class="page__main-section--exhibition-h3">І спогади і мрії</h3>
+          <h3 class="page__main-section--exhibition-h3">
+            І спогади і мрії
+            <img
+              src="./images/orange-sq.svg"
+              alt="s"
+              class="page__main-section--exhibition-h3--img"
+            />
+          </h3>
 
           <p class="page__main-section--exhibition-p">
             Національний художній музей України до 100 річчя від дня народження
@@ -342,7 +356,7 @@
               type="email"
               name="Email"
               class="page__footer--first-section__email"
-              placeholder="Email"
+              placeholder="E-mail"
               required
             />
             <button
@@ -415,6 +429,7 @@
           </li>
 
           <p class="page__footer--second__schedule--p">
+            <br />
             Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
             закриття музею
           </p>
