add transition to he menu remove the default border when input is focused add required to the email input fix BEM classes

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             aria-label="See current events"
           >
             <span class="btn__text">КВИТКИ</span>
-            <span class="btn--square btn--c-primary">
+            <span class="btn__square btn--c-primary">
               <span class="icon icon--arrow-right icon--white"></span>
             </span>
           </a>
@@ -63,8 +63,8 @@
       </div>
     </header>
 
-    <aside class="menu page__menu" id="menu">
-      <div class="menu__wrapper">
+    <div class="page__overlay">
+      <aside class="menu page__menu" id="menu">
         <div class="container">
           <div class="menu__content">
             <a
@@ -158,8 +158,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </aside>
+      </aside>
+    </div>
 
     <main class="main">
       <div class="main__content">
@@ -180,7 +180,11 @@
                   <p class="event-card__event">ВИСТАВКА</p>
                   <p class="event-card__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event-card__title">Йду і повертаюсь</h3>
+                <h3
+                  class="event-card__title event-card__title--open current-events__card-title"
+                >
+                  Йду і повертаюсь
+                </h3>
                 <p class="event-card__description">
                   Національний Художній Музей України презентує унікальну
                   частину колекції Градобанку - українське мистецтво другої
@@ -202,7 +206,11 @@
                   <p class="event-card__event">ВИСТАВКА</p>
                   <p class="event-card__date">26.08-29.11.2019</p>
                 </div>
-                <h3 class="event-card__title">І спогади і мрії</h3>
+                <h3
+                  class="event-card__title event-card__title--open current-events__card-title"
+                >
+                  І спогади і мрії
+                </h3>
                 <p class="event-card__description">
                   Національний художній музей України до 100 річчя від дня
                   народження видатної української художниці Тетяни Яблонської
@@ -219,9 +227,7 @@
                 <p class="event-card__event">ЛЕКЦІЯ</p>
                 <p class="event-card__date">26/08/2019 - 11:00</p>
               </div>
-              <h3 class="event-card__title--short">
-                Від класицизму до романтизму
-              </h3>
+              <h3 class="event-card__title">Від класицизму до романтизму</h3>
             </article>
           </div>
         </section>
@@ -297,14 +303,13 @@
                     type="email"
                     placeholder="E-mail"
                     class="subscription__input"
+                    required
                   />
 
-                  <button
-                    type="submit"
-                    name="subscription"
-                    class="subscription__btn"
-                  >
-                    <span class="icon icon--arrow-right"></span>
+                  <button type="submit" name="subscription" class="btn">
+                    <span class="btn__square btn__square--secondary">
+                      <span class="icon icon--arrow-right"></span>
+                    </span>
                   </button>
                 </form>
               </div>
@@ -401,11 +406,10 @@
             </ul>
           </div>
 
-          <a
-            href="#home"
-            class="btn btn--circle btn--back-to-top footer__back-to-top"
-          >
-            <span class="icon icon--arrow-up icon--black"></span>
+          <a href="#home" class="btn btn--back-to-top footer__back-to-top">
+            <span class="btn__circle btn__circle--back-to-top">
+              <span class="icon icon--arrow-up icon--black"></span>
+            </span>
           </a>
 
           <div class="divider footer__divider"></div>
