add resize listener

--- a/src/index.html
+++ b/src/index.html
@@ -237,7 +237,7 @@
             <h2>Галерея</h2>
 
             <div class="gallery__content">
-              <ul class="gallery__slider slider">
+              <ul id="gallery-list" class="gallery__slider slider">
                 <li class="gallery__item">
                   <a href="#" class="gallery__link">
                     <img
