--- a/src/index.html
+++ b/src/index.html
@@ -44,13 +44,13 @@
                   />
                 </g>
                 <defs>
-                  <clipPath id="clip0_12665_584">
+                  <clippath id="clip0_12665_584">
                     <rect
                       width="24"
                       height="24"
                       fill="white"
                     />
-                  </clipPath>
+                  </clippath>
                 </defs>
               </svg>
             </a>
@@ -97,13 +97,13 @@
                     />
                   </g>
                   <defs>
-                    <clipPath id="clip0_12594_30">
+                    <clippath id="clip0_12594_30">
                       <rect
                         width="24"
                         height="24"
                         fill="white"
                       />
-                    </clipPath>
+                    </clippath>
                   </defs>
                 </svg>
               </span>
@@ -145,13 +145,13 @@
                   />
                 </g>
                 <defs>
-                  <clipPath id="clip0_24982_574">
+                  <clippath id="clip0_24982_574">
                     <rect
                       width="24"
                       height="24"
                       fill="white"
                     />
-                  </clipPath>
+                  </clippath>
                 </defs>
               </svg>
             </a>
@@ -421,13 +421,13 @@
                     />
                   </g>
                   <defs>
-                    <clipPath id="clip0_320_220">
+                    <clippath id="clip0_320_220">
                       <rect
                         width="23.9626"
                         height="24"
                         fill="white"
                       />
-                    </clipPath>
+                    </clippath>
                   </defs>
                 </svg>
               </a>
@@ -457,14 +457,14 @@
                     />
                   </g>
                   <defs>
-                    <clipPath id="clip0_320_223">
+                    <clippath id="clip0_320_223">
                       <rect
                         width="24"
                         height="24"
                         fill="white"
                         transform="translate(0.0874023)"
                       />
-                    </clipPath>
+                    </clippath>
                   </defs>
                 </svg>
               </a>
