--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       href="./styles/main.scss"
     />
     <script
-      src="scripts/main.js"
+      src="./scripts/main.js"
       defer
     ></script>
   </head>
