--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>museum</title>
+    <link
+      rel="shortcut icon"
+      href="./images/logo-img/image.png"
+      type="image/x-icon"
+    />
+    <title>NAMU</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -124,107 +129,119 @@
       class="menu page__menu"
       id="menu"
     >
-      <div class="container">
-        <div class="menu__content">
-          <div class="menu__top">
-            <a
-              href="#home"
-              class="menu__icon--close"
-            >
-              <svg
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
+      <div class="menu__background">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a
+                href="#home"
+                class="menu__icon--close"
               >
-                <g clip-path="url(#clip0_24982_574)">
-                  <path
-                    d="M12 10.586L16.95 5.63599L18.364 7.04999L13.414 12L18.364 16.95L16.95 18.364L12 13.414L7.04999 18.364L5.63599 16.95L10.586 12L5.63599 7.04999L7.04999 5.63599L12 10.586Z"
-                    fill="white"
-                  />
-                </g>
-                <defs>
-                  <clippath id="clip0_24982_574">
-                    <rect
-                      width="24"
-                      height="24"
+                <svg
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_24982_574)">
+                    <path
+                      d="M12 10.586L16.95 5.63599L18.364 7.04999L13.414 12L18.364 16.95L16.95 18.364L12 13.414L7.04999 18.364L5.63599 16.95L10.586 12L5.63599 7.04999L7.04999 5.63599L12 10.586Z"
                       fill="white"
                     />
-                  </clippath>
-                </defs>
-              </svg>
-            </a>
+                  </g>
+                  <defs>
+                    <clippath id="clip0_24982_574">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
+              </a>
 
-            <nav class="menu__nav">
-              <ul class="menu__nav-list">
-                <div class="menu__nav-item-column">
-                  <li class="menu__nav-item">
-                    <a
-                      href="#gallery"
-                      class="nav__link menu__nav-link"
-                    >
-                      Галерея
-                    </a>
-                  </li>
-                  <li class="menu__nav-item">
-                    <a
-                      href="#current-events"
-                      class="nav__link menu__nav-link"
-                    >
-                      Виставки та події
-                    </a>
-                  </li>
-                </div>
-                <div class="menu__nav-item-column">
-                  <li class="menu__nav-item">
-                    <a
-                      href="#from-classicism-to-romanticism"
-                      class="nav__link menu__nav-link"
-                    >
-                      Про Нас
-                    </a>
-                  </li>
-                  <li class="menu__nav-item">
-                    <a
-                      href="#contacts"
-                      class="nav__link menu__nav-link"
-                    >
-                      Контакти
-                    </a>
-                  </li>
-                </div>
-              </ul>
-            </nav>
-          </div>
-
-          <div class="menu__bottom">
-            <div class="menu__bottom-wrapper-column">
-              <p class="menu__bottom-title">Графік роботи</p>
-              <p class="menu__bottom-schedule">
-                <span class="menu__bottom-schedule-strong">12:00 — 20:00</span>
-                середа
-                <br />
-                <span class="menu__bottom-schedule-strong">12:00 — 20:00</span>
-                четвер
-                <br />
-                <span class="menu__bottom-schedule-strong">12:00 — 20:00</span>
-                п’ятниця
-                <br />
-                <span class="menu__bottom-schedule-strong">11:00 — 19:00</span>
-                субота
-                <br />
-                <span class="menu__bottom-schedule-strong">11:00 — 19:00</span>
-                неділя
-              </p>
+              <nav class="menu__nav">
+                <ul class="menu__nav-list">
+                  <div class="menu__nav-item-column">
+                    <li class="menu__nav-item">
+                      <a
+                        href="#gallery"
+                        class="nav__link menu__nav-link"
+                      >
+                        Галерея
+                      </a>
+                    </li>
+                    <li class="menu__nav-item">
+                      <a
+                        href="#current-events"
+                        class="nav__link menu__nav-link"
+                      >
+                        Виставки та події
+                      </a>
+                    </li>
+                  </div>
+                  <div class="menu__nav-item-column">
+                    <li class="menu__nav-item">
+                      <a
+                        href="#from-classicism-to-romanticism"
+                        class="nav__link menu__nav-link"
+                      >
+                        Про Нас
+                      </a>
+                    </li>
+                    <li class="menu__nav-item">
+                      <a
+                        href="#contacts"
+                        class="nav__link menu__nav-link"
+                      >
+                        Контакти
+                      </a>
+                    </li>
+                  </div>
+                </ul>
+              </nav>
             </div>
-            <div class="menu__bottom-wrapper-column">
-              <p class="menu__bottom-weekend">
-                <span class="menu__bottom-weekend-strong">Вихідні:</span>
-                понеділок, вівторок
-                <br />
-                Каса припиняє роботу за 1 годину до закриття музею
-              </p>
+
+            <div class="menu__bottom">
+              <div class="menu__bottom-wrapper-column">
+                <p class="menu__bottom-title">Графік роботи</p>
+                <p class="menu__bottom-schedule">
+                  <span class="menu__bottom-schedule-strong">
+                    12:00 — 20:00
+                  </span>
+                  середа
+                  <br />
+                  <span class="menu__bottom-schedule-strong">
+                    12:00 — 20:00
+                  </span>
+                  четвер
+                  <br />
+                  <span class="menu__bottom-schedule-strong">
+                    12:00 — 20:00
+                  </span>
+                  п’ятниця
+                  <br />
+                  <span class="menu__bottom-schedule-strong">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                  <br />
+                  <span class="menu__bottom-schedule-strong">
+                    11:00 — 19:00
+                  </span>
+                  неділя
+                </p>
+              </div>
+              <div class="menu__bottom-wrapper-column">
+                <p class="menu__bottom-weekend">
+                  <span class="menu__bottom-weekend-strong">Вихідні:</span>
+                  понеділок, вівторок
+                  <br />
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -404,8 +421,9 @@
             </a>
             <div class="footer__icons">
               <a
-                href="#"
+                href="https://www.facebook.com/"
                 class="footer__icon-facebook"
+                target="_blank"
               >
                 <svg
                   width="24"
@@ -432,8 +450,9 @@
                 </svg>
               </a>
               <a
-                href="#"
+                href="https://www.instagram.com/"
                 class="footer__icon-instagram"
+                target="_blank"
               >
                 <svg
                   width="25"
@@ -507,10 +526,17 @@
             >
               <p class="footer__top-title">Контакти</p>
               <p class="footer__top-contacts">
-                вул. М. Грушевського, 6;
-                <br />
-                Київ, 01001
-                <br />
+                <a
+                  href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="footer__top-contacts-link"
+                >
+                  вул. М. Грушевського, 6;
+                  <br />
+                  Київ, 01001
+                  <br />
+                </a>
                 <a
                   href="tel:+380442781357"
                   class="footer__top-contacts-link"
